# market-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: crypto-agent.yml  stock-agent.yml  test.yml
config/: config.example.yaml
scripts/: run_local.py  test_telegram.py
src/agents/: __main__.py  crypto_agent.py  stock_agent.py
src/analyzers/: technical.py
src/data_sources/: coingecko.py  fear_greed.py  yahoo_finance.py
src/formatters/: crypto_message.py  stock_message.py
src/models/: crypto.py  stock.py
src/notifiers/: telegram.py
src/utils/: config.py  logger.py
tests/: test_config.py  test_crypto_agent.py  test_formatters.py  test_stock_agent.py  test_technical.py
tests/fixtures/: sample_crypto_data.json  sample_stock_data.json
